--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ footer{
 <body id="page">
 <header>
 	<div id='too'>
-		<img src='./img/t1.PNG'>
+		<a href='dbswo3644.github.io'><img src='./img/t1.PNG'></a>
 	</div>
 	<div id='to'>
 		<img src='./img/do.PNG'
