--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ footer{
 <body id="page">
 <header>
 	<div id='too'>
-		<a href='index.html'><img src='./img/t1.PNG'></a>
+		<img src='./img/t1.PNG'>
 	</div>
 	<div id='to'>
 		<img src='./img/do.PNG'
